syntax = "proto3";
package pb;
option go_package = "./pb";

enum RequestType  {
  HEART_BEAT = 0;
  ONLINE = 1;
  LIST_USERS = 2;
  SEND_MESSAGE = 3;
  OFFLINE = 4;
  RECEIVE_MESSAGE = 5;
}

enum MessageState {
  Sent = 0;
  DELIVERED = 1;
  Seen = 2;
}

enum AckType {
  REQUEST = 0;
  NOTICE = 1;
}

enum SessionType {
  USER = 0;
  GROUP = 1;
}

enum MessageType {
  TXT = 0;
  IMG = 1;
  VIDEO = 2;
}

enum UserState {
  ONLINE = 0;
  OFFLINE = 1;
  LOGOUT = 2;
}